k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
  namespace: ${NAMESPACE}
spec:
  type: LoadBalancer
  selector:
    app: angular-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
